@@ -1,3 +1,8 @@
+2015-09-09  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * org/jfree/chart/renderer/xy/XYShapeRenderer.java
+    (drawItem): Update crosshair state.
+
 2015-09-06  David Gilbert  <david.gilbert@object-refinery.com>
 
     * org/jfree/data/time/TimeSeries.java
